--- a/src/app/employees-manage-dash/employees-manage-dash.component.html
+++ b/src/app/employees-manage-dash/employees-manage-dash.component.html
@@ -9,7 +9,7 @@
 <div class="container" *ngIf="managerType != 'unknown'">
     <h1 class="page-title text-center" *ngIf="managerType == 'research'">ניהול עובדי קרן מחקרים</h1>
     <h1 class="page-title text-center" *ngIf="managerType == 'hr' || managerType == 'admin'">ניהול עובדים</h1>
-    <h1 class="page-title text-center" *ngIf="managerType == 'stager'">ניהול סטאג'רים</h1>
+    <h1 class="page-title text-center" *ngIf="managerType == 'stager'">ניהול סטאג'רים/רופאים</h1>
     <div class="container-fluid mb-2">
         <div class="row search-cont">
             <div class="col">
