--- a/src/app/form-dashboard/cpr-form/cpr-form.component.css
+++ b/src/app/form-dashboard/cpr-form/cpr-form.component.css
@@ -35,6 +35,9 @@
 .col-1{
     max-width: 114px;
 }
+.input-error {
+    border: red 1px solid;
+}
 .inside-col{
     width: 25%;
     display: flex;
