--- a/src/app/new-born/new-born.component.html
+++ b/src/app/new-born/new-born.component.html
@@ -379,8 +379,11 @@
                             >&nbsp;&nbsp;
                             <mat-radio-button value="קיסרי">קיסרי</mat-radio-button
                             >&nbsp;&nbsp;
-                            <mat-radio-button value='מחוץ לבי"ח'
+                            <mat-radio-button value='ואקום'
                                 >ואקום</mat-radio-button
+                            >&nbsp;&nbsp;
+                            <mat-radio-button value='מחוץ לבי"ח'
+                                >מחוץ לבי"ח</mat-radio-button
                             >&nbsp;&nbsp;
                         </mat-radio-group>
                     </div>
