--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,12 @@
 /* ::-webkit-scrollbar {
     width: 5px;
 } */
+/* .drugprotocols .mat-form-field-appearance-legacy .mat-form-field-infix{
+    padding: 0 !important;
+} */
+.drugprotocols .mat-form-field-appearance-legacy .mat-form-field-wrapper{
+    padding: 0 !important;
+}
 .point-right:after {
     content: "\25C0" !important;
     padding-right: 1em !important;
