--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
         <i class="material-icons closeMe"> close </i>
         <i class="material-icons open"> menu </i>
     </button>
-    <div dir="rtl" class="text-right" id="app-menu">
+    <div dir="rtl" class="test text-right" id="app-menu">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item" *ngIf="!_shoSofiMenu">
                 <a class="nav-link" routerLink="dashboard">Dashboard</a>
