--- a/src/app/employees-manage-dash/employees-manage-dash.component.css
+++ b/src/app/employees-manage-dash/employees-manage-dash.component.css
@@ -11,7 +11,10 @@
   .mat-row:nth-child(even){
     background-color: white;
   }
-   
+  .spinner{
+    left: 50%;
+    display: unset;
+  }
   .mat-row:nth-child(odd){
     background-color: aliceblue;
   }
