--- a/src/app/employees-manage-dash/employees-manage-dash.component.html
+++ b/src/app/employees-manage-dash/employees-manage-dash.component.html
@@ -165,13 +165,13 @@
                                 <div class="col-3">
                                     <div class="form-group lh-37">
                                         <mat-form-field>
-                                            <mat-label>סקטור</mat-label>
+                                            <mat-label>סקטור בלוסום</mat-label>
                                             <mat-select formControlName="Sektor" aria-placeholder="סקטור">
                                                 <mat-option value="">
                                                     הכל </mat-option>
                                                 <mat-option *ngFor="let sek of SektorsList"
-                                                    [value]="sek.EmployeeSektorID">
-                                                    {{sek.EmployeeSektorDescription}} </mat-option>
+                                                    [value]="sek.EmployeeBlossomSektorID">
+                                                    {{sek.EmployeeSektorBlossomDescription}} </mat-option>
                                             </mat-select>
                                         </mat-form-field>
                                     </div>
