--- a/src/app/form-dashboard/cpr-form/cpr-form.component.html
+++ b/src/app/form-dashboard/cpr-form/cpr-form.component.html
@@ -25,8 +25,8 @@
                         <div class="row">
                             <div class="col-12">
                                 <mat-form-field class="full-width">
-                                    <input [(ngModel)]="PatientPassport" [ngModelOptions]="{standalone: true}" matInput
-                                        placeholder="תעודת זהות">
+                                    <input [(ngModel)]="CaseNumber" [ngModelOptions]="{standalone: true}" matInput
+                                        placeholder="מספר מקרה">
                                 </mat-form-field>
                             </div>
                         </div>
