--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -225,6 +225,9 @@
                             <span *ngIf="item.Dept_Name != 'מיון יולדות (חדר לידה)'">תפוסה:
                                 {{item.PercentOccupancy}}%
                             </span>
+                            <span *ngIf="item.Dept_Name != 'מיון יולדות (חדר לידה)'">מיטות:
+                                {{item.DepartmentNumberOfBeds}}
+                            </span>
                         </div>
                     </mat-card>
                 </div>
@@ -246,6 +249,9 @@
                                 <span>תפוסה:
                                     {{item.PercentOccupancy}}%
                                 </span>
+                                <span>מיטות:
+                                    {{item.DepartmentNumberOfBeds}}
+                                </span>
                             </div>
                         </mat-card>
                     </div>
@@ -262,6 +268,9 @@
                                 סה"כ: {{item.OccupancyPerDepart}}
                                 <span>תפוסה:
                                     {{item.PercentOccupancy}}%
+                                </span>
+                                <span>מיטות:
+                                    {{item.DepartmentNumberOfBeds}}
                                 </span>
                             </div>
                         </mat-card>
@@ -280,6 +289,9 @@
                                 <span>תפוסה:
                                     {{item.PercentOccupancy}}%
                                 </span>
+                                <span>מיטות:
+                                    {{item.DepartmentNumberOfBeds}}
+                                </span>
                             </div>
                         </mat-card>
                     </div>
@@ -296,6 +308,9 @@
                                 סה"כ: {{item.OccupancyPerDepart}}
                                 <span>תפוסה:
                                     {{item.PercentOccupancy}}%
+                                </span>
+                                <span>מיטות:
+                                    {{item.DepartmentNumberOfBeds}}
                                 </span>
                             </div>
                         </mat-card>
@@ -314,6 +329,9 @@
                                 <span>תפוסה:
                                     {{item.PercentOccupancy}}%
                                 </span>
+                                <span>מיטות:
+                                    {{item.DepartmentNumberOfBeds}}
+                                </span>
                             </div>
                         </mat-card>
                     </div>
@@ -330,6 +348,9 @@
                                 סה"כ: {{item.OccupancyPerDepart}}
                                 <span>תפוסה:
                                     {{item.PercentOccupancy}}%
+                                </span>
+                                <span>מיטות:
+                                    {{item.DepartmentNumberOfBeds}}
                                 </span>
                             </div>
                         </mat-card>
