--- a/src/app/online-appointments/online-appointments.component.html
+++ b/src/app/online-appointments/online-appointments.component.html
@@ -46,6 +46,7 @@
                                 הקודם
                             </div>
                             <div
+                                #toDayCall
                                 class="btn btn-outline-secondary"
                                 mwlCalendarToday
                                 [(viewDate)]="viewDate"
